--- a/css/main.css
+++ b/css/main.css
@@ -12,17 +12,18 @@ p {
     text-align:center;
     background: antiquewhite;
     text-decoration:overline;
+
 }
 
 .mylove {
     border: 3px solid #666;
-    margin-top: 30px;
-
+    margin: 10px 340px 80px 50px;
     text-transform:uppercase;
 }
 #ulul{
     color: cadetblue;
     margin-bottom: 50px;
+    word-spacing: 50px;
 }
 img{
     height: 500px;
